--- a/.env
+++ b/.env
@@ -14,12 +14,12 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_SECRET=637f65b4c3ca52bc00a812cda6ed5e33
+#APP_ENV=dev
+#APP_SECRET=637f65b4c3ca52bc00a812cda6ed5e33
 ###< symfony/framework-bundle ###
 
 ###> symfony/webapp-meta ###
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+#MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/webapp-meta ###
 
 ###> doctrine/doctrine-bundle ###
@@ -27,7 +27,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:root@127.0.0.1:3306/minicrm?serverVersion=5.7"
+#DATABASE_URL="mysql://root:root@127.0.0.1:3306/minicrm"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
